@@ -112,9 +112,9 @@ print_version (FILE *file)
  * Log a debugging message.  This is a "NULL" message handler that
  * does nothing, discarding all messages.
  */
-void debug_logfunc (const gchar *log_domain,
+void debug_logfunc (const char *log_domain,
 		    GLogLevelFlags log_level,
-		    const gchar *message,
+		    const char *message,
 		    gpointer user_data)
 {
   /* Discard all messages. */
